--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>MY FIRST WEBSITE</h1>
+<p>LET'S BEGIN SEARCHING.</p>
 <h2>HTML Links</h2>
 <p>HTML links are defined with the a tag:</p>
-
 <a href="https://www.w3schools.com">This is a link</a>
 
 </body>
